2008-01-02  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/config.py:
	* flumotion/component/encoders/encodingprofile.py:
	* flumotion/component/encoders/encodingwizardplugin.py:
	* flumotion/component/encoders/jpeg/jpeg_wizard.py:
	* flumotion/component/encoders/smoke/smoke_wizard.py:
	* flumotion/component/encoders/speex/speex_wizard.py:
	* flumotion/component/encoders/theora/theora_wizard.py:
	* flumotion/component/encoders/vorbis/vorbis_wizard.py:
	* flumotion/manager/config.py:
	* flumotion/test/test_admin_config.py:
	  Set svn:keywords on newly added files.

2008-01-02  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/client.py:
	Fix recent connections shown on connections menu.

2007-12-28  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_disk.glade:
	* flumotion/wizard/consumptionsteps.py 
	(DiskStep.on_checkbutton_rotate_toggled)
	(DiskStep._update_radio): Avoid relying on __nonzero__ which is gone.
	(DiskStep.on_radiobutton_has_time_toggled)
	(DiskStep.on_radiobutton_has_size_toggled): 
	Use a separate method callback for each widget.

2007-12-28  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/component.py:
	  When stopping explicitly, create a deferred. Fire it once shutdown is
	  complete. Return it from remote stop method.
	  Allows restart to work non-racily (it mostly worked in the normal admin
	  anyway, because the normal admin uses stop then start, not restart).

2007-12-28  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  Raise an exception rather than silently returning if we fail to stop a
	  lost component when the worker says it's still running.
	  Don't disconnect avatar explicitly when stopping a running component;
	  it'll be disconnected when the shutdown completes. Add a FIXME here.
	  Remove some dead code in unregisterComponent. Remove a stale FIXME.

2007-12-28  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/gtk/dialogs.py: