@@ -1,0 +1,35 @@
+# -*- Mode: Python; test-case-name: flumotion.test.test_admin_multi -*-
+# vi:si:et:sw=4:sts=4:ts=4
+#
+# Flumotion - a streaming media server
+# Copyright (C) 2004,2005,2006,2007,2008 Fluendo, S.L. (www.fluendo.com).
+# All rights reserved.
+
+# This file may be distributed and/or modified under the terms of
+# the GNU General Public License version 2 as published by
+# the Free Software Foundation.
+# This file is distributed without any warranty; without even the implied
+# warranty of merchantability or fitness for a particular purpose.
+# See "LICENSE.GPL" in the source distribution for more information.
+
+# Licensees having purchased or holding a valid Flumotion Advanced
+# Streaming Server license may use this file in accordance with the
+# Flumotion Advanced Streaming Server Commercial License Agreement.
+# See "LICENSE.Flumotion" in the source distribution for more information.
+
+# Headers in this file shall remain intact.
+
+__version__ = "$Rev$"
+
+from flumotion.common import testsuite
+
+from flumotion.admin.connections import get_recent_connections, \
+     RecentConnection
+
+
+class AdminConnectiontionsTest(testsuite.TestCase):
+    def testGetRecentConnections(self):
+        recent = get_recent_connections()
+        if not recent:
+            return
+        assert isinstance(recent[0], RecentConnection)
